<resources>
    <string name="app_name">K22411CSampleProject</string>
    <string name="title_login_user_name">Username:</string>
    <string name="title_login_user_name_hint">Enter your username</string>
    <string name="title_login_password">Password:</string>
    <string name="title_login_save_login_infor">Save login infor?</string>
    <string name="title_login_button_login">Login</string>
    <string name="confirm_exit_title">Exit confirmation</string>
    <string name="confirm_exit_message">Are you sure you want to exit?</string>
    <string name="confirm_exit_yes">YES</string>
    <string name="confirm_exit_no">NO</string>
    <string name="title_employee">Employee</string>
    <string name="title_customer">Customer</string>
    <string name="title_healthcare">Health Care</string>
    <string name="title_employee_healthcare">Employee Healthcare</string>
    <string name="title_height">Height</string>
    <string name="title_weight">Weight\n</string>
    <string name="title_calculate">Calculate\n</string>
    <string name="title_clear">Clear</string>
    <string name="title_close">Close</string>
    <string name="title_slim">Slim</string>
    <string name="title_normal">Normal</string>
    <string name="title_fat">Fat</string>

    <string name="title_salary">Salary\n</string>
    <string name="title_categories">Categories\n</string>
    <string name="title_Product">Product</string>
    <string name="title_product">Product</string>
    <string name="title_advanced_product">Advanced Product\n</string>
    <string name="title_new_customer">New Customer\n</string>
    <string name="title_broadcast_advertising">Broadcast Advertising</string>
    <string name="title_help">Help</string>
    <string name="title_customer_detail">Customer Details</string>
    <string name="title_customer_id">Customer ID</string>
    <string name="title_customer_name">Customer Name\n</string>
    <string name="title_customer_email">Customer Email</string>
    <string name="title_customer_phone">Customer Phone\n</string>
    <string name="title_customer_username">Username</string>
    <string name="title_customer_password">Password</string>
    <string name="title_new" />
    <string name="title_save">Save</string>
    <string name="title_remove">Remove</string>
    <string name="title_button_new">New</string>
    <string name="title_new_product">New Product</string>
    <string name="title_product_detail" />
    <string name="title_product_details">Product Detail</string>
    <string name="title_product_id">ProductID\n</string>
    <string name="title_product_name">Product Name\n</string>
    <string name="title_product_quantity">Product Quantity</string>
    <string name="title_product_price">Product Price</string>
</resources>