<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:id="@+id/main" android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical" tools:context=".EmployeeHealthCareActivity">
    <TextView android:id="@+id/textView3" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/title_employee_healthcare" android:textAlignment="center" android:textColor="#3F51B5" android:textSize="24sp"/>
    <TextView android:id="@+id/textView4" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/title_height" android:textSize="24sp"/>
    <EditText android:id="@+id/edtHeight" android:layout_width="match_parent" android:layout_height="wrap_content" android:ems="10" android:inputType="number"/>
    <TextView android:id="@+id/textView5" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/title_weight" android:textSize="24sp"/>
    <EditText android:id="@+id/edtWeight" android:layout_width="match_parent" android:layout_height="wrap_content" android:ems="10" android:inputType="number"/>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">

        <Button
            android:id="@+id/btnCalculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title_calculate"
            android:textSize="8sp"
            android:typeface="normal" />

        <Button
            android:id="@+id/btnClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title_clear"
            android:textSize="8sp" />

        <Button
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title_close"
            android:textSize="8sp" />
    </LinearLayout>
    <TextView android:id="@+id/txtResult" android:layout_width="match_parent" android:layout_height="wrap_content" android:background="#FFEB3B" android:textSize="24sp"/>
</LinearLayout>