<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:id="@+id/main" android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical" tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="430dp"
        app:srcCompat="@mipmap/ic_logo_login" />
    <TextView android:id="@+id/textView" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/title_login_user_name" android:textSize="24sp"/>

    <EditText
        android:id="@+id/edtUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#7C3C3C"
        android:ems="10"
        android:hint="@string/title_login_user_name_hint"
        android:inputType="text"
        android:textSize="24sp" />
    <TextView android:id="@+id/textView2" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/title_login_password" android:textSize="24sp"/>
    <EditText android:id="@+id/edtPassword" android:layout_width="match_parent" android:layout_height="wrap_content" android:ems="10" android:inputType="textPassword" android:textSize="24sp"/>
    <CheckBox android:id="@+id/chkSaveLoginInfor" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/title_login_save_login_infor" android:textSize="24sp"/>
    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="horizontal">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="199dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="do_login"
            android:text="@string/title_login_button_login"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/imgExit"
            android:layout_width="wrap_content"
            android:layout_height="49dp"
            android:layout_weight="1"
            android:onClick="do_exit"
            app:srcCompat="@mipmap/ic_logo_exit" />
    </LinearLayout>
</LinearLayout>